--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "webcrypto-liner-shim",
   "version": "1.4.5",
   "description": "A WebCrypto polyfill that \"smooths out\" the rough-edges in existing User Agent implementations.",
-  "main": "build/webcrypto-liner.shim.min.js",
-  "module": "build/index.es.js",
-  "browser": "build/webcrypto-liner.shim.mjs",
-  "browser:min": "build/webcrypto-liner.shim.min.mjs",
-  "browser:es5": "build/webcrypto-liner.shim.js",
-  "browser:es5:min": "build/webcrypto-liner.shim.min.js",
+  "main": "build/webcrypto-liner.shim.js",
   "types": "index.d.ts",
   "files": [
     "build",
